--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
+    "sass-loader": "^8.0.2",
     "vue-jest": "^3.0.4"
   }
 }
