--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "@nuxtjs/axios": "^5.12.5",
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
-    "nuxt-fontawesome": "^0.4.0"
+    "nuxt-fontawesome": "^0.4.0",
+    "nuxt-gmaps": "^1.2.10"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^3.4.2",
