--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12",
     "nuxt-fontawesome": "^0.4.0",
-    "nuxt-gmaps": "^1.2.10"
+    "nuxt-gmaps": "^1.2.10",
+    "vue-social-sharing": "^3.0.8"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^3.4.2",
